<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteQuickViewActivity">

    <Spinner
        android:id="@+id/courseSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/note_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="@string/note_title_hint"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/courseSpinner"
        app:layout_constraintStart_toStartOf="@id/courseSpinner"
        app:layout_constraintTop_toBottomOf="@id/courseSpinner" />

    <TextView
        android:id="@+id/nt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Note"
        app:layout_constraintStart_toStartOf="@id/note_title"
        app:layout_constraintTop_toBottomOf="@id/note_title"/>

    <TextView
        android:id="@+id/note_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/note_text_hint"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/note_title"
        app:layout_constraintStart_toStartOf="@id/note_title"
        app:layout_constraintTop_toBottomOf="@id/nt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:textAllCaps="false"
        android:layout_margin="8dp"
        app:backgroundTint="@color/pluralsight_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>